samples/_failures_safe/1761437538_c3f5bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d9474ed.c: In function ‘main’:
./samples/SAFE/__tmp_2d9474ed.c:150:40: error: expected ‘]’ at end of input
  150 |                 int result[rows1][cols1
      |                                        ^
      |                                        ]
./samples/SAFE/__tmp_2d9474ed.c:150:17: error: expected declaration or statement at end of input
  150 |                 int result[rows1][cols1
      |                 ^~~
./samples/SAFE/__tmp_2d9474ed.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2d9474ed.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2d9474ed.c:150:17: error: expected declaration or statement at end of input
